Minor layout updates.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ email:
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Emre Aksan's personal page.
 footer_text: >
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: emre aksan, generative models, motion, 3D, jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
@@ -46,7 +45,7 @@ rss_icon: false
 # -----------------------------------------------------------------------------
 
 navbar_fixed: true
-footer_fixed: true
+footer_fixed: false
 
 # Dimensions
 max_width: 800px
